fix word-wrap on the rte remove background-color from the editor when it is in read-only mode.

--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -251,6 +251,7 @@ $m-input-style--padding: 4px !default;
             position: relative;
             min-height: 24px;
             flex: 1 1 auto;
+            max-width: 100%;
 
             .m--has-border-top & {
                 .m--is-focus & {
